[ENH] layout: better positioning for the columns toggle icons, using better icons for the purpose (toggle-left and toggle-right) - TODO: jonny, please fix and optimize the lib/jquery_tiki/tiki-jquery.js function so the right column toggle icon works properly - I did not want to duplicate the JS code (should use toggle-right when column visible and toggle-left when closed) - thanks!
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@60384 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/less/tiki-boxes_and_panels.less
+++ b/themes/base_files/less/tiki-boxes_and_panels.less
@@ -87,17 +87,3 @@ a.flipmodtitle .icon {
 	overflow-x: hidden;
 }
 
-.toggle_zone {
-	position: absolute;
-	top: 110px;
-	z-index: 10;
-}
-
-.toggle_zone.right {
-	right: 0;
-}
-
-.toggle_zone.left {
-	left: 0;
-}
-
